--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,13 @@
 
 [env:pint]
 platform = ststm32
+platform_packages = toolchain-gccarmnoneeabi@~1.100301.220327
 board = genericSTM32F103R8
 framework = arduino
 lib_deps = khoih-prog/FlashStorage_STM32@^1.2.0
+debug_tool = stlink
+upload_protocol = custom
+upload_command = st-flash --reset write $SOURCE 0x08003000
+board_build.ldscript = stm32.ld
+build_flags = 
+    -DVECT_TAB_OFFSET=0x3000
