--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common]
+build_flags = 
+	-DXR=1
+	-DPINT=2
+
 [env:pint]
 platform = ststm32
 platform_packages = toolchain-gccarmnoneeabi@~1.100301.220327
@@ -18,4 +23,5 @@ upload_protocol = custom
 upload_command = st-flash write $SOURCE 0x08003000
 board_build.ldscript = stm32.ld
 build_flags = 
-    -DVECT_TAB_OFFSET=0x3000
+	-DVECT_TAB_OFFSET=0x3000
+	-DONEWHEEL_TYPE=2
