--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/pint/firmware.elf",
-            "projectEnvName": "pint",
+            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/xr/firmware.elf",
+            "projectEnvName": "xr",
             "toolchainBinDir": "/home/racekit/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "/home/racekit/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
@@ -26,8 +26,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/pint/firmware.elf",
-            "projectEnvName": "pint",
+            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/xr/firmware.elf",
+            "projectEnvName": "xr",
             "toolchainBinDir": "/home/racekit/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "/home/racekit/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd"
@@ -36,8 +36,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/pint/firmware.elf",
-            "projectEnvName": "pint",
+            "executable": "/home/racekit/projects/ow-firmware-extractor/.pio/build/xr/firmware.elf",
+            "projectEnvName": "xr",
             "toolchainBinDir": "/home/racekit/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "/home/racekit/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
