--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[common]
-build_flags = 
-	-DXR=1
-	-DPINT=2
-
-[env:pint]
+[env]
 platform = ststm32
 platform_packages = toolchain-gccarmnoneeabi@~1.100301.220327
 board = genericSTM32F103R8
 framework = arduino
 debug_tool = stlink
 upload_protocol = custom
-upload_command = st-flash write $SOURCE 0x08003000
+upload_command = st-flash --reset write $SOURCE 0x08003000
 board_build.ldscript = stm32.ld
 build_flags = 
 	-DVECT_TAB_OFFSET=0x3000
-	-DONEWHEEL_TYPE=2
+	-DXR=1
+	-DPINT=2
+
+[env:xr]
+build_flags = -DONEWHEEL_TYPE=1
+
+[env:pint]
+build_flags = -DONEWHEEL_TYPE=2
