--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,10 @@ jobs:
     - name: Build Pint firmware
       run: pio run -e pint
     - name: Sign release
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
       run: |
+        pwd
+        ls -l
         python3 pad.py .pio/build/xr/firmware/bin
         python3 pad.py .pio/build/pint/firmware/bin
         openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/xr/firmware.bin -out xr-signed-extractor.bin
