--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,16 +35,22 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade platformio
     - name: Build XR firmware
-      run: pio run -e xr
+      run: |
+        pwd
+        ls -l
+        pio run -e xr
+        python3 pad.py .pio/build/xr/firmware/bin
     - name: Build Pint firmware
-      run: pio run -e pint
+      run: |
+        pwd
+        ls -l
+        pio run -e pint
+        python3 pad.py .pio/build/pint/firmware/bin
     - name: Sign release
       # if: startsWith(github.ref, 'refs/tags/')
       run: |
         pwd
         ls -l
-        python3 pad.py .pio/build/xr/firmware/bin
-        python3 pad.py .pio/build/pint/firmware/bin
         openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/xr/firmware.bin -out xr-signed-extractor.bin
         openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/pint/firmware.bin -out pint-signed-extractor.bin
         env:
