--- a/platformio.ini
+++ b/platformio.ini
@@ -17,13 +17,13 @@ debug_tool = stlink
 upload_protocol = custom
 upload_command = st-flash --reset write $SOURCE 0x08003000
 board_build.ldscript = stm32.ld
-build_flags = 
-	-DVECT_TAB_OFFSET=0x3000
-	-DXR=1
-	-DPINT=2
 
 [env:xr]
-build_flags = -DONEWHEEL_TYPE=1
+build_flags = 
+	-DVECT_TAB_OFFSET=0x3000
+	-DONEWHEEL_TYPE=1
 
 [env:pint]
-build_flags = -DONEWHEEL_TYPE=2
+build_flags = 
+	-DVECT_TAB_OFFSET=0x3000
+	-DONEWHEEL_TYPE=2
