wip to support the GT

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,19 +11,30 @@
 [env]
 platform = ststm32
 platform_packages = toolchain-gccarmnoneeabi@~1.100301.220327
-board = genericSTM32F103R8
 framework = arduino
 debug_tool = stlink
 upload_protocol = custom
-upload_command = st-flash --reset write $SOURCE 0x08003000
-board_build.ldscript = stm32.ld
 
 [env:xr]
 build_flags = 
 	-DVECT_TAB_OFFSET=0x3000
 	-DONEWHEEL_TYPE=1
+board_build.ldscript = stm32f103.ld
+board = genericSTM32F103R8
+upload_command = st-flash --reset write $SOURCE 0x08003000
 
 [env:pint]
 build_flags = 
 	-DVECT_TAB_OFFSET=0x3000
 	-DONEWHEEL_TYPE=2
+board_build.ldscript = stm32f103.ld
+board = genericSTM32F103R8
+upload_command = st-flash --reset write $SOURCE 0x08003000
+
+[env:gt]
+build_flags = 
+	-DVECT_TAB_OFFSET=0x20000
+	-DONEWHEEL_TYPE=3
+board_build.ldscript = stm32f415.ld
+board = genericSTM32F415RG
+upload_command = st-flash --reset write $SOURCE 0x08020000
