--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,18 @@ platform = ststm32
 platform_packages = toolchain-gccarmnoneeabi@~1.100301.220327
 framework = arduino
 debug_tool = stlink
-upload_protocol = custom
+upload_protocol = stlink
 
 [env:gt]
 build_flags = 
 	-DVECT_TAB_OFFSET=0x20000
 	-DONEWHEEL_TYPE=3
+	-DPIN_SERIAL_TX=PD8
+	-DPIN_SERIAL_RX=PD9
+	-DENABLE_HWSERIAL3
 board_build.ldscript = stm32f415.ld
+board_build.offset_address = 0x20000
 board = genericSTM32F415RG
-upload_command = st-flash --reset write $SOURCE 0x08020000
 
 [env:xr]
 build_flags = 
@@ -29,7 +32,7 @@ build_flags =
 	-DONEWHEEL_TYPE=1
 board_build.ldscript = stm32f103.ld
 board = genericSTM32F103R8
-upload_command = st-flash --reset write $SOURCE 0x08003000
+board_build.offset_address = 0x3000
 
 [env:pint]
 build_flags = 
@@ -37,4 +40,4 @@ build_flags =
 	-DONEWHEEL_TYPE=2
 board_build.ldscript = stm32f103.ld
 board = genericSTM32F103R8
-upload_command = st-flash --reset write $SOURCE 0x08003000
+board_build.offset_address = 0x3000
