--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       contents: write
     env:
       ENCRYPTION_KEY: ${{ secrets.SIGNING_KEY }}
+      GT_ENCRYPTION_KEY: ${{ secrets.GT_ENCRYPTION_KEY }}
+      GT_INITIALIZATION_VECTOR: ${{ secrets.GT_INITIALIZATION_VECTOR }}
 
     steps:
     - uses: actions/checkout@v2
