--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,51 +19,51 @@ jobs:
       GT_INITIALIZATION_VECTOR: ${{ secrets.GT_INITIALIZATION_VECTOR }}
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    - name: Cache PlatformIO
-      uses: actions/cache@v2
-      with:
-        path: ~/.platformio
-        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-    - name: Set up Python
-      uses: actions/setup-python@v2
-    - name: Install PlatformIO
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade platformio
-    - name: Build XR firmware
-      run: |
-        pwd
-        ls -l
-        pio run -e xr
-        python3 pad.py .pio/build/xr/firmware.bin
-        openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/xr/firmware.bin -out xr-signed-extractor.bin
-    - name: Build Pint firmware
-      run: |
-        pwd
-        ls -l
-        pio run -e pint
-        python3 pad.py .pio/build/pint/firmware.bin
-        openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/pint/firmware.bin -out pint-signed-extractor.bin
-     - name: Build Pint firmware
-      run: |
-        pwd
-        ls -l
-        pio run -e gt
-        python3 pad.py .pio/build/gt/firmware.bin
-        openssl enc -aes-128-ctr -nopad -K $GT_ENCRYPTION_KEY -iv $GT_INITIALIZATION_VECTOR -in .pio/build/gt/firmware.bin -out gt-signed-extractor.bin
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          xr-signed-extractor.bin
-          pint-signed-extractor.bin
-          gt-signed-extractor.bin
+      - uses: actions/checkout@v2
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Cache PlatformIO
+        uses: actions/cache@v2
+        with:
+          path: ~/.platformio
+          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+      - name: Build XR firmware
+        run: |
+          pwd
+          ls -l
+          pio run -e xr
+          python3 pad.py .pio/build/xr/firmware.bin
+          openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/xr/firmware.bin -out xr-signed-extractor.bin
+      - name: Build Pint firmware
+        run: |
+          pwd
+          ls -l
+          pio run -e pint
+          python3 pad.py .pio/build/pint/firmware.bin
+          openssl enc -aes-128-ecb -nosalt -nopad -K $ENCRYPTION_KEY -in .pio/build/pint/firmware.bin -out pint-signed-extractor.bin
+      - name: Build GT firmware
+        run: |
+          pwd
+          ls -l
+          pio run -e gt
+          python3 pad.py .pio/build/gt/firmware.bin
+          openssl enc -aes-128-ctr -nopad -K $GT_ENCRYPTION_KEY -iv $GT_INITIALIZATION_VECTOR -in .pio/build/gt/firmware.bin -out gt-signed-extractor.bin
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            xr-signed-extractor.bin
+            pint-signed-extractor.bin
+            gt-signed-extractor.bin
